# neovus

./: .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
benchmark/: benchmark.csv  neonatal_vus_benchmark.csv
benchmark/checklists/: ACADM.yaml  ARX.yaml  CDKL5.yaml  CFTR.yaml  GAA.yaml  GALT.yaml  KCNQ2.yaml  KCNQ3.yaml  KCNT1.yaml  OTC.yaml  PAH.yaml  PDHA1.yaml  POLG.yaml  SCN1A.yaml  SCN2A.yaml  SLC25A13.yaml  SLC2A1.yaml  STXBP1.yaml
docs/: DEMO_VIDEO.md  RESEARCH_ROADMAP.md  SUBMISSION.md
scripts/: build_benchmark.py  validate.py
src/neovus/: __init__.py  checklists.py  cli.py  evidence.py  htmlreport.py  pipeline.py  report.py  scoring.py  visuals.py
src/neovus/sources/: __init__.py  _http.py  alphafold.py  hpo.py  myvariant.py  resolve.py  uniprot.py
tests/: test_checklists.py  test_evidence.py  test_scoring_resolve.py
