[project]
name = "neovus-kg"
version = "0.1.0"
description = "Transparent, evidence-traceable interpretation of a single neonatal VUS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "moonicu" }]
dependencies = [
    "streamlit>=1.36",
    "requests>=2.32",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
neovus = "neovus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neovus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
